Fix: Properly handle Gemini API key in various environments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     gtag('config', 'G-PPLMXLJNZT');
   </script>
   
+  <!-- Load environment variables at runtime -->
+  <script src="/quizai/env-config.js"></script>
+  
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfjXkorAAAAAOk4X5LwVd-8RgwMGS0IWxZLtFGQ"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
