--- a/index.html
+++ b/index.html
@@ -304,3 +304,5 @@
 </body>
 </html><link rel="stylesheet" href="index.css">
 <script src="index.tsx" type="module"></script>
+<link rel="stylesheet" href="index.css">
+<script src="index.tsx" type="module"></script>
