--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Vietnamese:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   
+  <meta name="description" content="QuizAI giúp bạn tạo, chia sẻ và luyện tập quiz dễ dàng, ứng dụng AI hỗ trợ học tập hiệu quả.">
+<meta name="keywords" content="QuizAI, quiz, tạo quiz, luyện tập quiz, AI, học tập, education, test, exam">
+<meta property="og:title" content="QuizAI - Tạo và luyện tập quiz thông minh bằng AI">
+<meta property="og:description" content="QuizAI giúp bạn tạo, chia sẻ và luyện tập quiz dễ dàng, ứng dụng AI hỗ trợ học tập hiệu quả.">
+<meta property="og:url" content="https://teosushi1014.github.io/quizai/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://teosushi1014.github.io/quizai/assets/logo/avt.ico">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="QuizAI - Tạo và luyện tập quiz thông minh bằng AI">
+<meta name="twitter:description" content="QuizAI giúp bạn tạo, chia sẻ và luyện tập quiz dễ dàng, ứng dụng AI hỗ trợ học tập hiệu quả.">
+<meta name="twitter:image" content="https://teosushi1014.github.io/quizai/assets/logo/avt.ico">
+<link rel="canonical" href="https://teosushi1014.github.io/quizai/" />
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","name":"QuizAI","url":"https://teosushi1014.github.io/quizai/","description":"QuizAI giúp bạn tạo, chia sẻ và luyện tập quiz dễ dàng, ứng dụng AI hỗ trợ học tập hiệu quả."}</script>
+  
   <style>
     :root {
       --duration-fast: 150ms; 
